--- a/network_modeling/renewalProc.tex
+++ b/network_modeling/renewalProc.tex
@@ -120,7 +120,7 @@ So as $t \to\infty$, $N(t)\to\infty$ \textbf{linearly} in $t$.
 	We know that $N(t)\xrightarrow{t\to +\infty} \infty$ with probability 1
 	$$\implies \lim_{t \to +\infty} \frac{S_{N(t)}}{N(t)} =\lim_{N \to +\infty} \frac{S_{N}}{N} = \mu \quad \text{w.p. 1 for LLN}$$
 
-\textbf{SO}
+	So
 \begin{equation}
 	\mu \le \lim_{t \to +\infty} \frac{t}{N(t)} \stackrel{(1)}{\le}\mu \quad \implies \lim_{t \to +\infty} \frac{t}{N(t)} = \mu
 \end{equation}
@@ -146,9 +146,9 @@ The sum converges unless $F_r(t)=1$ with geometric distribution.
 	F_r(t)=\prob[S_r\le t]=\prob[\sum\limits_{i=1}^r X_i \le t]
 \end{equation}
 I can choose $r$ sufficiently large such that I can set $F_r(t)<1$ strictly. \\
-\textbf{So}, formally
+So, formally
 %\begin{equation*}
-	$$\exists t_0 >0 \text{ s.t. } F(t_0)<1 \quad \forall t	\exists r \text{ s.t. } F_r(t)<1$$
+	$$\exists t_0 >0 \text{ s.t. } F(t_0)<1 \quad \forall t \mbox{ }	\exists r \text{ s.t. } F_r(t)<1$$
 %\end{equation*}
 \begin{equation*}
 	\prob[S_r >t] = \prob\left[\sum\limits_{i=1}^r X_i > t \right] \ge
